#pragma once

enum class ProjectionMode {
    kPerspective,
    kOrthogonal,
};
